# openraw

./: CMakeLists.txt  NOTES.md  PERF.md  README.md  TODO.md  benchmark_stages.sh  build.sh  concat_files.sh  download_libs.sh  import.sh  look_bleach_bypass.sh  look_cross_process.sh  look_vintage_warm.sh  run.sh
camera/: .gitignore  Makefile  setup.sh
camera/scripts/: concat_files.sh  diff_import.py  files_default.txt  final_msg.txt
camera/src/: main.cpp
camera_pipe/: CMakeLists.txt
camera_pipe/src/: halide_trace_config.h
cmake/: FindSDL2_image.cmake  InterFont.CMakeLists.txt  font_to_header.cmake  imgui.CMakeLists.txt  patch_rawspeed.cmake
data/: cameras.xml  files_default.txt  files_rawspeed.txt
doc/: HL_CEFD.md  HL_EFD.md  HL_Optimize.md  PLAN.md  TODO.md  intro.md  sched_strategy.md  split_schedules.md
src/: capture.cpp  color_tools.cpp  color_tools.h  demosaic_AHD.h  demosaic_LMMSE.h  demosaic_RI.h  demosaic_fast.h  denoise_guided.h  denoise_nlmeans.h  halide_benchmark.h  halide_guided_filter.h  halide_trace_config.h  lens_info.cpp  pipeline_generator.cpp  pipeline_helpers.h  pipeline_schedule.h  pipeline_utils.cpp  pipeline_utils.h  process.cpp  process_options.cpp  process_options.h  raw_load.cpp  raw_load.h  simple_timer.h  stage_apply_curve.h  stage_bayer_normalize.h  stage_ca_correct.h  stage_color_correct.h  stage_color_grading.h  stage_dehaze.h  stage_deinterleave.h  stage_demosaic.cpp  stage_demosaic.h  stage_denoise.h  stage_exposure.h  stage_hot_pixel_suppression.h  stage_lens_geometry.h  stage_local_adjust_laplacian.h  stage_local_tonal_adjustments.h  stage_normalize_and_expose.h  (+6 more)
src/editor/: app_state.h  curves_editor.cpp  curves_editor.h  editor_theme.cpp  editor_theme.h  editor_ui.cpp  editor_ui.h  halide_runner.cpp  halide_runner.h  imgui_custom_widgets.cpp  imgui_custom_widgets.h  lv_conf.h  lvgl_assert_handler.c  main.c  main.cpp  pane_manager.cpp  pane_manager.h  process_options.h  sdl_viewer.h  stage_lens_geometry.h  texture_utils.cpp  texture_utils.h  view_inspector.c
src/editor/panes/: pane_color_curves.cpp  pane_color_curves.h  pane_color_wheels.cpp  pane_color_wheels.h  pane_core_pipeline.cpp  pane_core_pipeline.h  pane_dehaze.cpp  pane_dehaze.h  pane_denoise.cpp  pane_denoise.h  pane_histogram_curves.cpp  pane_histogram_curves.h  pane_lens_correction.cpp  pane_lens_correction.h  pane_local_adjustments.cpp  pane_local_adjustments.h  pane_preview.cpp  pane_preview.h  pane_tone_curves.cpp  pane_tone_curves.h  pane_vignette.cpp
src/lvgl-editor/: lvgl_assert_handler.h  sdl_viewer.c  view_inspector.h
src/tests/: main.cpp  test_ca_correct.cpp  test_color_correct.cpp  test_demosaic.cpp  test_end_to_end_curves.cpp  test_exposure.cpp  test_harness.h  test_hot_pixel.cpp  test_pipeline_integration.cpp  test_saturation.cpp  test_stage_output.cpp  test_tone_curve.cpp
